--- a/about-annika.html
+++ b/about-annika.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
       <div class="header">
         <div class="banner">
-          <a href="homepage.html"><img src="images/AMlogotransparent.png"></a>
+          <a href="index.html"><img src="images/AMlogotransparent.png"></a>
           <!--adding "burger" navigation for mobile devices --- ensuring responsiveness -->
           <a href="javascript:void(0);" class="icon" onclick="openMobileNav()">
             <i class="fa fa-bars"></i>
@@ -26,10 +26,11 @@
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
-              <div class="nav-item"><a href="homepage.html">Home</a></div>
-              <div class="nav-item dropdown dropdown--OurWork">
-                <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
-                  Collection
+              <div class="nav-item"><a href="index.html">Home</a></div>
+
+              <div class="nav-item dropdown dropdown--Portfolio">
+                <a class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
+                  Portfolios
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
@@ -42,7 +43,7 @@
               
 
               <div class="nav-item dropdown dropdown--About">
-                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   About
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -57,12 +58,13 @@
           </div>
         </div>
 
+
       
         <!-- content section html -->
         <div class="content-aboutannika">
 <div class="text_heading headingtext-aboutannika">About Annika</div>
     <img src="images/aboutannika.png" alt="image of Annika">
-    <div class="about_text">
+      <div class="about_text">
         Annika was first introduced to photography at <br>
         an early age when she was gifted a camera for <br>
         her birthday. She initially developed her passion <br>
@@ -79,9 +81,8 @@
         and capture their special moments. She has won  <br>
         multiple awards for her work and continues to<br>
         grow and push herself as a photographer.<br>
-        <button class="getintouch-about"><a href="contact-us.html"><h1>Get In Touch</h1></a></button>
       </div>
-
+      <button class="getintouch-about"><a href="contact-us.html"><h1>Get In Touch</h1></a></button>
       </div>
 </div>
 <!--footer html section-->
