--- a/animals.html
+++ b/animals.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
       <div class="header">
         <div class="banner">
-          <a href="homepage.html"><img src="images/AMlogotransparent.png"></a>
+          <a href="index.html"><img src="images/AMlogotransparent.png"></a>
           <!--adding "burger" navigation for mobile devices --- ensuring responsiveness -->
           <a href="javascript:void(0);" class="icon" onclick="openMobileNav()">
             <i class="fa fa-bars"></i>
@@ -26,10 +26,11 @@
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
-              <div class="nav-item"><a href="homepage.html">Home</a></div>
-              <div class="nav-item dropdown dropdown--OurWork">
-                <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
-                  Collection
+              <div class="nav-item"><a href="index.html">Home</a></div>
+
+              <div class="nav-item dropdown dropdown--Portfolio">
+                <a class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
+                  Portfolios
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
@@ -42,7 +43,7 @@
               
 
               <div class="nav-item dropdown dropdown--About">
-                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   About
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -56,7 +57,6 @@
             </div>
           </div>
         </div>
-
 
 
 
@@ -119,8 +119,6 @@
     <div class="footer-option">
       <a href="about-annika.html">About Annika Page</a>
       <br>
-      <a href="termsconditions.html">Terms & Conditions</a>      
-      <br>
       <a href="FAQ.html">Frequently asked questions</a>         
     </div>
   </div>
@@ -129,7 +127,10 @@
   
   <div class="footer information-footer col">Information
     <div class="footer-option">
-      <a href="privacypolicy.html">Privacy Policy</a>           
+      <a href="privacypolicy.html">Privacy Policy</a>      
+      <br>
+      <a href="termsconditions.html">Terms & Conditions</a>      
+      <br>     
     </div>
   
     </div>
@@ -145,8 +146,8 @@
   <!--allows us to display dynamic data easily-->
   
   <!--Custome JS for VUE -->
-  <script src="VUE.js"></script>
-  
+  <script src="gallery_vue.js"></script>
+  <script src="mainVUE.js"></script>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
