--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
       <div class="header">
         <div class="banner">
-          <a href="homepage.html"><img src="images/AMlogotransparent.png"></a>
+          <a href="index.html"><img src="images/AMlogotransparent.png"></a>
           <!--adding "burger" navigation for mobile devices --- ensuring responsiveness -->
           <a href="javascript:void(0);" class="icon" onclick="openMobileNav()">
             <i class="fa fa-bars"></i>
@@ -26,23 +26,26 @@
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
-              <div class="nav-item"><a href="homepage.html">Home</a></div>
-              <div class="nav-item dropdown dropdown--OurWork">
-                <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
-                  Collection
+              <div class="nav-item"><a href="index.html">Home</a></div>
+
+              <div class="nav-item dropdown dropdown--Portfolio">
+                <a class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
+                  Portfolios
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
-                  <li><a class="dropdown-item" href="animals.html">Animals</a></li>
-                  <li><a class="dropdown-item" href="people.html">People</a></li>
-                </ul>
+                <div class="dropdown-menu-wrapper">
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
+                    <li><a class="dropdown-item" href="nature.html">Nature</a></li>
+                    <li><a class="dropdown-item" href="animals.html">Animals</a></li>
+                    <li><a class="dropdown-item" href="people.html">People</a></li>
+                  </ul>
+                </div>
               </div>
               <div class="nav-item"><a href="testimonials.html">Testimonials</a></div>
               
 
               <div class="nav-item dropdown dropdown--About">
-                <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   About
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -63,7 +66,7 @@
         <!--coding for slideshow noted at the beginning of the slideshow page-->
         <div class="slideshow">
           <!--Bootstrap Carousel-->
-          <div id="slideshow" class="carousel slide" data-bs-ride="carousel">
+          <div id="slideshow-images" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#slideshow" data-bs-slide-to="0" class="active" aria-current="true"
                 aria-label="Slide 1"></button>
@@ -105,25 +108,29 @@
           <button class="getintouch-button center"><a href="contact-us.html"><p>Get In Touch</p></a></button>
 
           <div class="row-homepage">
-            <div class="homepage-img">
-              <img src="images/festivecover.png" alt="Pink flower" style="width:100%">
+            <div class="homepage-img center">
+              <a href="contemporary.html">
+                <img src="images/model3.png" alt="Pink flower" style="width:100%">
+                </a>
             </div>
-            <div class="homepage-img">
-              <img src="images/slideimg1.png" alt="Girl looking into mirror" style="width:100%">
-            </div>
-            <div class="homepage-img">
-              <img src="images/flowerfield.png" alt="Red flower" style="width:100%">
+
+
+            <div class="homepage-img center">
+              <a href="nature.html">
+                <img src="images/pinkflower.png" alt="Girl looking into mirror" style="width:100%" class="image">
+              </a>
             </div>
           </div>
           <div class="row-homepage">
-            <div class="homepage-img">
-              <img src="images/contemporarycover.png" alt="Light reflections on girls face" style="width:100%">
+            <div class="homepage-img center">
+              <a href="animals.html">
+                <img src="images/zooanimalcover.png" alt="Light reflections on girls face" style="width:100%" class="image">
+              </a>
             </div>
-            <div class="homepage-img">
-              <img src="images/pinkflower.png" alt="Orange flower" style="width:100%">
-            </div>
-            <div class="homepage-img">
-              <img src="images/model2.png" alt="controled light on girls face" style="width:100%">
+            <div class="homepage-img center">
+              <a href="people.html">
+                <img src="images/people4.png" alt="Orange flower" style="width:100%" class="image">
+              </a>
             </div>
           </div>
         </div>
